--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,10 @@
 cmake_minimum_required(VERSION 3.14)
-project(grepCLI LANGUAGES CXX)
+project(grep LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-add_executable(grepCLI
+add_executable(grep
         src/main.cpp
         src/grep.cpp
 )
